# forged

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: ci.yml  release.yml
src/: clipboard.rs  config.rs  git.rs  lib.rs  main.rs  prompt.rs
src/ai/: mod.rs  provider.rs  sanitize.rs
src/ai/providers/: chatgpt.rs  claude.rs  gemini.rs  mod.rs  openai_compat.rs  openrouter.rs
src/commands/: commit.rs  config.rs  hook.rs  mod.rs  setup.rs  upgrade.rs
src/tui/: mod.rs  theme.rs
src/tui/views/: action_menu.rs  editor.rs  file_picker.rs
src/tui/widgets/: multi_select.rs  select.rs  text_input.rs
src/vim/: buffer.rs  command.rs  mod.rs  motion.rs
tasks/: aicommits-rs.md  forged.md  tui-migration.md
tests/: full_flow.rs  generate_pipeline.rs  git_commit.rs  git_hook.rs  provider_http.rs
