[package]
name = "forged"
version = "0.1.0"
edition = "2024"
description = "AI-powered git commit message generator"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
inquire = { version = "0.7", features = ["editor"] }
colored = "3"
anyhow = "1"
async-trait = "0.1"
regex = "1"
futures = "0.3"
atty = "0.2"

[dev-dependencies]
mockito = "1"
tempfile = "3"
