[package]
name = "forged"
version = "0.2.2"
edition = "2024"
description = "AI-powered git commit message generator"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
ratatui = "0.30"
crossterm = "0.29"
colored = "3"
anyhow = "1"
async-trait = "0.1"
regex = "1"
futures = "0.3"
atty = "0.2"

[dev-dependencies]
mockito = "1"
tempfile = "3"
serial_test = "3"
